--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Application de suivi kilométrique",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
